@@ -15,49 +15,61 @@
 # limitations under the License.
 
 set -e
+CASSANDRA_HOME=/usr/local/apache-cassandra
+CASSANDRA_BIN=$CASSANDRA_HOME/bin/cassandra
 CASSANDRA_CONF_DIR=/etc/cassandra
 CASSANDRA_CFG=$CASSANDRA_CONF_DIR/cassandra.yaml
+CASSANDRA_CONF_DIR=/etc/cassandra
+
+if [ -z "$POD_IP" ]; then
+  POD_IP=$(hostname -I| awk '{print $1}')
+fi
+
+hostname -i
+if [ $? -ne 0 ]
+then
+  # fix for host networking
+  echo "$POD_IP $HOSTNAME" >> /etc/hosts
+fi
 
 # we are doing StatefulSet or just setting our seeds
 if [ -z "$CASSANDRA_SEEDS" ]; then
-  HOSTNAME=$(hostname -f)
-  CASSANDRA_SEEDS=$(hostname -f)
+  CASSANDRA_SEEDS=$POD_IP
 fi
 
 # The following vars relate to there counter parts in $CASSANDRA_CFG
 # for instance rpc_address
-CASSANDRA_RPC_ADDRESS="${CASSANDRA_RPC_ADDRESS:-0.0.0.0}"
-CASSANDRA_NUM_TOKENS="${CASSANDRA_NUM_TOKENS:-32}"
-CASSANDRA_CLUSTER_NAME="${CASSANDRA_CLUSTER_NAME:='Test Cluster'}"
-CASSANDRA_LISTEN_ADDRESS=${POD_IP:-$HOSTNAME}
+CASSANDRA_AUTO_BOOTSTRAP="${CASSANDRA_AUTO_BOOTSTRAP:-true}"
 CASSANDRA_BROADCAST_ADDRESS=${POD_IP:-$HOSTNAME}
 CASSANDRA_BROADCAST_RPC_ADDRESS=${POD_IP:-$HOSTNAME}
-CASSANDRA_DISK_OPTIMIZATION_STRATEGY="${CASSANDRA_DISK_OPTIMIZATION_STRATEGY:-ssd}"
-CASSANDRA_MIGRATION_WAIT="${CASSANDRA_MIGRATION_WAIT:-1}"
-CASSANDRA_ENDPOINT_SNITCH="${CASSANDRA_ENDPOINT_SNITCH:-SimpleSnitch}"
+CASSANDRA_CLUSTER_NAME="${CASSANDRA_CLUSTER_NAME:='Test Cluster'}"
 CASSANDRA_DC="${CASSANDRA_DC}"
+CASSANDRA_DISK_OPTIMIZATION_STRATEGY="${CASSANDRA_DISK_OPTIMIZATION_STRATEGY:-ssd}"
+CASSANDRA_ENDPOINT_SNITCH="${CASSANDRA_ENDPOINT_SNITCH:-SimpleSnitch}"
+CASSANDRA_INTERNODE_COMPRESSION="${CASSANDRA_INTERNODE_COMPRESSION:-dc}"
+CASSANDRA_LISTEN_ADDRESS=${POD_IP:-$HOSTNAME}
+CASSANDRA_LOG_GC="${CASSANDRA_LOG_GC:-false}"
+CASSANDRA_LOG_GC_VERBOSE="${CASSANDRA_GC_VERBOSE:-false}"
+CASSANDRA_LOG_JSON="${CASSANDRA_LOG_JSON:-false}"
+CASSANDRA_LOG_PATH="${CASSANDRA_LOG_PATH:-/var/log/cassandra}"
+CASSANDRA_LOG_TO_FILES="${CASSANDRA_LOG_TO_FILES:-false}"
+CASSANDRA_MIGRATION_WAIT="${CASSANDRA_MIGRATION_WAIT:-1}"
+CASSANDRA_NUM_TOKENS="${CASSANDRA_NUM_TOKENS:-32}"
 CASSANDRA_RACK="${CASSANDRA_RACK}"
 CASSANDRA_RING_DELAY="${CASSANDRA_RING_DELAY:-30000}"
-CASSANDRA_AUTO_BOOTSTRAP="${CASSANDRA_AUTO_BOOTSTRAP:-true}"
+CASSANDRA_RPC_ADDRESS="${CASSANDRA_RPC_ADDRESS:-0.0.0.0}"
 CASSANDRA_SEEDS="${CASSANDRA_SEEDS:false}"
 CASSANDRA_SEED_PROVIDER="${CASSANDRA_SEED_PROVIDER:-org.apache.cassandra.locator.SimpleSeedProvider}"
-CASSANDRA_AUTO_BOOTSTRAP="${CASSANDRA_AUTO_BOOTSTRAP:false}"
 
 # Turn off JMX auth
 CASSANDRA_OPEN_JMX="${CASSANDRA_OPEN_JMX:-true}"
 
-# send GC to STDOUT
-CASSANDRA_GC_STDOUT="${CASSANDRA_GC_STDOUT:-false}"
-
-# verbose GC logging
-CASSANDRA_GC_VERBOSE="${CASSANDRA_GC_VERBOSE:-false}"
-
 echo Starting Cassandra on ${CASSANDRA_LISTEN_ADDRESS}
 echo CASSANDRA_CONF_DIR ${CASSANDRA_CONF_DIR}
-echo CASSANDRA_CFG ${CASSANDRA_CFG}
 echo CASSANDRA_AUTO_BOOTSTRAP ${CASSANDRA_AUTO_BOOTSTRAP}
 echo CASSANDRA_BROADCAST_ADDRESS ${CASSANDRA_BROADCAST_ADDRESS}
 echo CASSANDRA_BROADCAST_RPC_ADDRESS ${CASSANDRA_BROADCAST_RPC_ADDRESS}
+echo CASSANDRA_CFG ${CASSANDRA_CFG}
 echo CASSANDRA_CLUSTER_NAME ${CASSANDRA_CLUSTER_NAME}
 echo CASSANDRA_COMPACTION_THROUGHPUT_MB_PER_SEC ${CASSANDRA_COMPACTION_THROUGHPUT_MB_PER_SEC}
 echo CASSANDRA_CONCURRENT_COMPACTORS ${CASSANDRA_CONCURRENT_COMPACTORS}
@@ -67,13 +79,16 @@ echo CASSANDRA_COUNTER_CACHE_SIZE_IN_MB ${CASSANDRA_COUNTER_CACHE_SIZE_IN_MB}
 echo CASSANDRA_DC ${CASSANDRA_DC}
 echo CASSANDRA_DISK_OPTIMIZATION_STRATEGY ${CASSANDRA_DISK_OPTIMIZATION_STRATEGY}
 echo CASSANDRA_ENDPOINT_SNITCH ${CASSANDRA_ENDPOINT_SNITCH}
-echo CASSANDRA_GC_STDOUT ${CASSANDRA_GC_STDOUT}
-echo CASSANDRA_GC_VERBOSE ${CASSANDRA_GC_VERBOSE}
 echo CASSANDRA_GC_WARN_THRESHOLD_IN_MS ${CASSANDRA_GC_WARN_THRESHOLD_IN_MS}
 echo CASSANDRA_INTERNODE_COMPRESSION ${CASSANDRA_INTERNODE_COMPRESSION}
 echo CASSANDRA_KEY_CACHE_SIZE_IN_MB ${CASSANDRA_KEY_CACHE_SIZE_IN_MB}
 echo CASSANDRA_LISTEN_ADDRESS ${CASSANDRA_LISTEN_ADDRESS}
 echo CASSANDRA_LISTEN_INTERFACE ${CASSANDRA_LISTEN_INTERFACE}
+echo CASSANDRA_LOG_JSON ${CASSANDRA_LOG_JSON}
+echo CASSANDRA_LOG_GC ${CASSANDRA_LOG_GC}
+echo CASSANDRA_LOG_GC_VERBOSE ${CASSANDRA_LOG_GC_VERBOSE}
+echo CASSANDRA_LOG_PATH ${CASSANDRA_LOG_PATH}
+echo CASSANDRA_LOG_TO_FILES ${CASSANDRA_LOG_TO_FILES}
 echo CASSANDRA_MEMTABLE_ALLOCATION_TYPE ${CASSANDRA_MEMTABLE_ALLOCATION_TYPE}
 echo CASSANDRA_MEMTABLE_CLEANUP_THRESHOLD ${CASSANDRA_MEMTABLE_CLEANUP_THRESHOLD}
 echo CASSANDRA_MEMTABLE_FLUSH_WRITERS ${CASSANDRA_MEMTABLE_FLUSH_WRITERS}
@@ -87,6 +102,8 @@ echo CASSANDRA_RPC_INTERFACE ${CASSANDRA_RPC_INTERFACE}
 echo CASSANDRA_SEEDS ${CASSANDRA_SEEDS}
 echo CASSANDRA_SEED_PROVIDER ${CASSANDRA_SEED_PROVIDER}
 
+# set the storage directory
+sed -ri 's/^cassandra_storagedir.*/cassandra_storagedir="$CASSANDRA_DATA"/' "$CASSANDRA_HOME/bin/cassandra.in.sh"
 
 # if DC and RACK are set, use GossipingPropertyFileSnitch
 if [[ $CASSANDRA_DC && $CASSANDRA_RACK ]]; then
@@ -141,9 +158,18 @@ for yaml in \
   var="CASSANDRA_${yaml^^}"
   val="${!var}"
   if [ "$val" ]; then
-    sed -ri 's/^(# )?('"$yaml"':).*/\2 '"$val"'/' "$CASSANDRA_CFG"
+    sed -ri 's/^(#\s*)?('"$yaml"':).*/\2 '"$val"'/' "$CASSANDRA_CFG"
   fi
 done
+
+while IFS='=' read -r name value ; do
+  if [[ $name == 'CASSANDRA_YAML_'* ]]; then
+    val="${!name}"
+    yaml=`echo "${name,,}" | cut -c 16-`
+    echo "FOUND $name $yaml $val"
+    sed -ri 's/^(#\s*)?('"$yaml"':).*/\2 '"$val"'/' "$CASSANDRA_CFG"
+  fi
+done < <(env)
 
 echo "auto_bootstrap: ${CASSANDRA_AUTO_BOOTSTRAP}" >> $CASSANDRA_CFG
 
@@ -157,19 +183,43 @@ fi
 
 sed -ri 's/- class_name: SEED_PROVIDER/- class_name: '"$CASSANDRA_SEED_PROVIDER"'/' $CASSANDRA_CFG
 
-if [[ $CASSANDRA_GC_STDOUT == 'true' ]]; then
-  # send gc to stdout
-  sed -ri 's/JVM_OPTS.*-Xloggc:.*//' $CASSANDRA_CONF_DIR/cassandra-env.sh
-else
-  mkdir -p "${CASSANDRA_DATA}/log/"
-  echo "-Xloggc:${CASSANDRA_DATA}/log/gc.log" >> $CASSANDRA_CONF_DIR/jvm.options
-  echo "-XX:+UseGCLogFileRotation" >> $CASSANDRA_CONF_DIR/jvm.options
-  echo "-XX:NumberOfGCLogFiles=10" >> $CASSANDRA_CONF_DIR/jvm.options
-  echo "-XX:GCLogFileSize=10M" >> $CASSANDRA_CONF_DIR/jvm.options
+sed -ri 's/JVM_OPTS.*Xloggc.*//' $CASSANDRA_CONF_DIR/cassandra-env.sh
+if [[ $CASSANDRA_LOG_GC == 'true' ]]; then
+  echo "-XX:+PrintGCDetails" >> $CASSANDRA_CONF_DIR/jvm.options
+  echo "-XX:+PrintGCDateStamps" >> $CASSANDRA_CONF_DIR/jvm.options
+  echo "-XX:+PrintHeapAtGC" >> $CASSANDRA_CONF_DIR/jvm.options
+  echo "-XX:+PrintTenuringDistribution" >> $CASSANDRA_CONF_DIR/jvm.options
+  echo "-XX:+PrintGCApplicationStoppedTime" >> $CASSANDRA_CONF_DIR/jvm.options
+  echo "-XX:+PrintPromotionFailure" >> $CASSANDRA_CONF_DIR/jvm.options
+
+  if [[ $CASSANDRA_LOG_GC_VERBOSE == 'true' ]]; then
+    echo "-XX:PrintFLSStatistics=1" >> $CASSANDRA_CONF_DIR/jvm.options
+  fi
+
+  if [[ $CASSANDRA_LOG_TO_FILES == 'true' ]]; then
+    echo "-Xloggc:${CASSANDRA_LOG_PATH}/gc.log" >> $CASSANDRA_CONF_DIR/jvm.options
+    echo "-XX:+UseGCLogFileRotation" >> $CASSANDRA_CONF_DIR/jvm.options
+    echo "-XX:NumberOfGCLogFiles=10" >> $CASSANDRA_CONF_DIR/jvm.options
+    echo "-XX:GCLogFileSize=10M" >> $CASSANDRA_CONF_DIR/jvm.options
+  fi
 fi
 
-if [[ $CASSANDRA_GC_VERBOSE == 'true' ]]; then
-  echo "-XX:PrintFLSStatistics=1" >> $CASSANDRA_CONF_DIR/jvm.options
+# configure logging
+sed -ri 's/.*cassandra_parms=.*-Dlogback.configurationFile.*//' $CASSANDRA_BIN
+sed -ri 's/.*cassandra_parms=.*-Dcassandra.logdir.*//' $CASSANDRA_BIN
+echo "-Dcassandra.logdir=${CASSANDRA_LOG_PATH}" >> $CASSANDRA_CONF_DIR/jvm.options
+if [[ $CASSANDRA_LOG_TO_FILES == 'true' ]]; then
+  if [[ $CASSANDRA_LOG_JSON == 'true' ]]; then
+    echo "-Dlogback.configurationFile=${CASSANDRA_CONF_DIR}/logback-json-files.xml" >> $CASSANDRA_CONF_DIR/jvm.options
+  else
+    echo "-Dlogback.configurationFile=${CASSANDRA_CONF_DIR}/logback-files.xml" >> $CASSANDRA_CONF_DIR/jvm.options
+  fi
+else
+  if [[ $CASSANDRA_LOG_JSON == 'true' ]]; then
+    echo "-Dlogback.configurationFile=${CASSANDRA_CONF_DIR}/logback-json-stdout.xml" >> $CASSANDRA_CONF_DIR/jvm.options
+  else
+    echo "-Dlogback.configurationFile=${CASSANDRA_CONF_DIR}/logback-stdout.xml" >> $CASSANDRA_CONF_DIR/jvm.options
+  fi
 fi
 
 # getting WARNING messages with Migration Service
@@ -190,6 +240,13 @@ if [[ $CASSANDRA_OPEN_JMX == 'true' ]]; then
 fi
 
 chmod 700 "${CASSANDRA_DATA}"
-chown -c -R cassandra: "${CASSANDRA_DATA}" "${CASSANDRA_CONF_DIR}"
+chmod 700 "${CASSANDRA_LOG_PATH}"
+chown -c -R cassandra: "${CASSANDRA_DATA}" "${CASSANDRA_CONF_DIR}" "${CASSANDRA_LOG_PATH}"
 
-su cassandra -c "/usr/local/apache-cassandra/bin/cassandra -f"
+echo "/etc/resolv.conf"
+cat /etc/resolv.conf
+
+echo "$CASSANDRA_CFG"
+cat $CASSANDRA_CFG
+
+su cassandra -c "$CASSANDRA_BIN -f"
